project('nauty', 'c',
  version : '2.7.1',
  default_options : ['warning_level=3'])

lib = library('nauty',
  'gtnauty.c',
  'gtools.c',
  'gutil1.c',
  'gutil2.c',
  'naugraph.c',
  'naugroup.c',
  'naurng.c',
  'nausparse.c',
  'naugstrings.c',
  'nautil.c',
  'nautinv.c',
  'naututil.c',
  'nauty.c',
  'nautycliquer.c',
  'planarity.c',
  'schreier.c',
  'traces.c',
  version : '2.7.1',
  install : true)

executable('dreadnaut',
  'dreadnaut.c',
  link_with : lib,
  install : true)

install_headers(
  'gtools.h',
  'gutils.h',
  'naugroup.h',
  'naugstrings.h',
  'naurng.h',
  'nausparse.h',
  'nautaux.h',
  'nautinv.h',
  'naututil.h',
  'nauty.h',
  'nautycliquer.h',
  'planarity.h',
  'quarticirred28.h',
  'schreier.h',
  'traces.h',
  subdir : 'nuaty')
